exercises/17-authorization-policy/manifests/deny-authz-test-namespace.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: deny-authz-test
  namespace: bookinfo
spec:
  selector:
    matchLabels:
      app: productpage
  action: DENY
  rules:
    - from:
        - source:
            namespaces:
              - authz-test
